# agentmem

./: CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agentmem/: __init__.py  embeddings.py  eval.py  llm.py  memory.py
examples/: quickstart.py
tests/: test_memory.py
