[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmem-bounded"
version = "0.1.0"
description = "A bounded, self-consolidating long-term memory layer for LLM agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "agents", "memory", "rag", "ai", "long-horizon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core is pure-stdlib and runs with zero API keys

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/agentmem"

[tool.hatch.build.targets.wheel]
packages = ["agentmem"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Pyflakes (dead code, undefined names), syntax errors, and import sorting.
# Style rules like line-length enforcement are intentionally left off.
select = ["E9", "F", "I"]
